Resolved content overflow in moder page

--- a/app/styles/components/_gallery.scss
+++ b/app/styles/components/_gallery.scss
@@ -104,4 +104,10 @@
     input {
     display: block;
   }
+  .flex-item-content {
+  font-size: 0.6rem;
+    h3{
+      font-size: 0.9rem;
+    }
+  }
 }
